examples/test/testpolicy7381.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7381
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key37: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value29
          key45: value41
          key21: value32
      podSelector:
        matchLabels:
          key14: value48
          key17: value45
